# xpublish-opendap

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  how2package4ioos.md  index.rst  ioos_pkg_skeleton.rst
notebooks/: IOOS-Python-Package-Skeleton.ipynb  tutorial.ipynb
tests/: Readme.md  conftest.py  datasets.py  docker-compose.yaml  server.py  test_opendap_router.py  test_server.py
tests/data/: PRISM_v2_slice.nc  min_coordinates_encoding.nc  tutorial_air_temperature.nc
xpublish_opendap/: __init__.py  dap_xarray.py  plugin.py  router.py
