[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xpublish_opendap"
description = "OpenDAP plugin for Xpublish"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["xarray", "xpublish", "opendap"]
license = { file = "LICENSE.txt" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/xpublish-community/xpublish-opendap/"

[project.entry-points."xpublish.plugin"]
opendap = "xpublish_opendap.plugin:OpenDapPlugin"

[tool.setuptools]
packages = ["xpublish_opendap"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "xpublish_opendap/_version.py"

[tool.check-manifest]
ignore = ["xpublish_opendap/_version.py"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PL",  # pylint
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "PLR2004"  # It's reasonable to use magic values in tests
    ]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# Allow fastapi.Depends and other dependency injection style function arguments
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
